--- a/Test de Normalidad - Análisis de las acciones de Microsoft.ipynb
+++ b/Test de Normalidad - Análisis de las acciones de Microsoft.ipynb
@@ -339,7 +339,7 @@
     "x = 0.10\n",
     "\n",
     "Px = 1- ss.norm.cdf(x, m_mean, m_risk)\n",
-    "print(\"La probabilidad de que las gancias mensuales sean mayores a \"+ str(x*100)+\"% es de\", round(Px,4))"
+    "print(\"La probabilidad de que las ganancias mensuales sean mayores a \"+ str(x*100)+\"% es de\", round(Px,4))"
    ]
   },
   {
@@ -362,7 +362,7 @@
     "    if m_rets[i] > 0.10:\n",
     "        ten.append(m_rets[i])\n",
     "        \n",
-    "print(\"La probabilidad según las frecuencias de que las gancias mensuales sean mayores a 10%:\", round(len(ten)/len(m_rets),4))"
+    "print(\"La probabilidad según las frecuencias de que las ganancias mensuales sean mayores a 10%:\", round(len(ten)/len(m_rets),4))"
    ]
   },
   {
